--- a/changgou_parent/changgou_common_db/pom.xml
+++ b/changgou_parent/changgou_common_db/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>mapper-spring-boot-starter</artifactId>
             <version>2.0.4</version>
         </dependency>
+        <!--druid 连接池-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.0.9</version>
+        </dependency>
         <!--MySQL数据库驱动-->
         <dependency>
             <groupId>mysql</groupId>
