--- a/changgou_parent/changgou_service/changgou_file_service/pom.xml
+++ b/changgou_parent/changgou_service/changgou_file_service/pom.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>changgou_parent</artifactId>
+        <artifactId>changgou_service</artifactId>
         <groupId>com.tabwu</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>changgou_service</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>changgou_goods_service</module>
-        <module>changgou_file_service</module>
-    </modules>
+    <artifactId>changgou_file_service</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -24,8 +19,14 @@
     <dependencies>
         <dependency>
             <groupId>com.tabwu</groupId>
-            <artifactId>changgou_common_db</artifactId>
+            <artifactId>changgou_common</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.oschina.zcx7878</groupId>
+            <artifactId>fastdfs-client-java</artifactId>
+            <version>1.27.0.0</version>
         </dependency>
     </dependencies>
 
